--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,30 @@
+annotated-types==0.7.0
+anyio==4.9.0
+asgiref==3.8.1
+async-timeout==5.0.1
+asyncpg==0.30.0
+bcrypt==4.3.0
+click==8.1.8
 Django==4.2.19
 djangorestframework==3.15.2
-psycopg2==2.9.10
+ecdsa==0.19.1
+exceptiongroup==1.2.2
+fastapi==0.115.12
+h11==0.14.0
+idna==3.10
+passlib==1.7.4
+psycopg==3.2.6
+psycopg2-binary==2.9.10
+pyasn1==0.4.8
+pydantic==2.11.3
+pydantic_core==2.33.1
+python-jose==3.4.0
+rsa==4.9.1
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.40
 sqlparse==0.5.3
+starlette==0.46.2
+typing-inspection==0.4.0
+typing_extensions==4.13.1
+uvicorn==0.34.2
