--- a/requirements.txt
+++ b/requirements.txt
@@ -10,14 +10,19 @@ djangorestframework==3.15.2
 ecdsa==0.19.1
 exceptiongroup==1.2.2
 fastapi==0.115.12
+gunicorn==23.0.0
 h11==0.14.0
 idna==3.10
+packaging==25.0
 passlib==1.7.4
+pillow==11.2.1
 psycopg==3.2.6
+psycopg2==2.9.10
 psycopg2-binary==2.9.10
 pyasn1==0.4.8
 pydantic==2.11.3
 pydantic_core==2.33.1
+python-decouple==3.8
 python-jose==3.4.0
 rsa==4.9.1
 six==1.17.0
@@ -25,8 +30,7 @@ sniffio==1.3.1
 SQLAlchemy==2.0.40
 sqlparse==0.5.3
 starlette==0.46.2
+transliterate==1.10.2
 typing-inspection==0.4.0
 typing_extensions==4.13.1
 uvicorn==0.34.2
-pillow==11.2.1
-python-decouple==3.8
